<resources>
    <string name="app_name">Simple Time Clock</string>

    <!-- MainActivity -->
    <string name="main_activity_title">Active Employees</string>
    <string name="clock_out_text">Clock out</string>
    <string name="break_ended_toast_message">Break ended</string>
    <string name="break_started_toast_message">Break started</string>

    <string name="all_employees_activity_title">All Employees</string>
    <string name="error_text_insert">There was a problem when trying to add a new employee, please try it again</string>
    <string name="employee_name">name</string>
    <string name="wage">hourly wage</string>
    <string name="empty_active_list_message">Your list of active employees is currently empty.</string>

    <string name="empty_all_employees_list_message">Add a new employee here.</string>

    <!-- DialogFragment -->
    <string name="dialog_accept_button">Accept</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_title_text_new">Add a new employee</string>
    <string name="dialog_title_text_edit">Edit employee</string>
    <string name="status_update_message">Status updated!</string>
    <string name="success_delete_message">Items deleted successfully</string>
    <string name="partial_delete_message">Some items couldn\'t be deleted</string>
    <string name="failed_delete_message">An error has occurred, please try again</string>

    <!-- EmployeeDetailsActivity -->
    <string name="text_wage">Wage:</string>
    <string name="text_total_hours_worked">Total Worked:\u0020</string>
    <string name="text_total_earnings">Total Earnings:\u0020</string>
    <string name="text_periodic_earnings">Unpaid Earnings:\u0020</string>
    <string name="text_periodic_worked_hours">Unpaid Time:\u0020</string>
    <string name="text_custom_work_log_search">Custom Work Log Search</string>
    <string name="dollar_currency_symbol">$</string>
    <string name="view_work_log_button_text">View work log</string>
    <string name="pay_button_text">Pay</string>
    <string name="paid_earnings_message">paid</string>
    <string name="item_title_edit">Edit</string>
    <string name="item_title_delete">Delete</string>
    <string name="item_title_add">Add New Employee</string>
    <string name="item_header_date">Date</string>
    <string name="item_header_hours">Hours</string>
    <string name="item_header_breaks">Breaks</string>
    <string name="item_header_earnings">Earned</string>
    <string name="item_footer_total">Total</string>
    <string name="start_date_text">From</string>
    <string name="end_date_text">To</string>
    <string name="default_date_text">mm/dd/yyyy</string>
    <string name="message_invalid_date_range">Pick a valid date</string>

    <!-- AddEmployeeDialogFragment -->
    <string name="dialog_add_photo_title">Profile photo</string>

    <!-- WorkLog Activity -->
    <string name="cannot_edit_time_text">You cannot edit an active time</string>

    <!-- WorkLog details -->
    <string name="worklog_details_activity_title">Edit Times</string>
    <string name="worklog_detail_clocked_in_text">Clocked in</string>
    <string name="worklog_detail_clocked_out_text">Clocked out</string>
    <string name="breaks_text">Breaks</string>
    <string name="menu_item_save">Save</string>
    <string name="update_success_message">Changes saved</string>
    <string name="deleted_break_message">Break entry deleted</string>
    <string name="worklog_detail_text_warning">Please use this functionality with caution! Double check your dates before saving! \nIn case you get negative results, come back and try again. This screen is still in Beta version. If you face any issue, contact the developer (screenshots are always helpful).</string>
    <string name="worklog_detail_delete_text">Delete</string>
    <string name="worklog_detail_delete_dialog_text">Delete current work log?</string>
    <string name="worklog_detail_delete_dialog_yes">Yes</string>
    <string name="worklog_detail_delete_dialog_no">No</string>
    <string name="deleted_time_message">Work Log Deleted</string>
    <string name="snackbar_incoherent_dates_message">Incoherent dates. Correct it and try again</string>
    <string name="snackbar_ok_button">OK</string>

    <!-- Banner Ad -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="transition_photo">transition_photo</string>
</resources>
