<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.mig.simpletimeclock.view.ui.WorkLogDetailsActivity">

    <LinearLayout
        android:id="@+id/worklog_details_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/worklog_deatils_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/worklog_card_margin"
            android:background="@android:color/holo_red_light"
            android:padding="@dimen/warning_padding"
            android:text="@string/worklog_detail_text_warning"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/worklog_card_margin"
            android:elevation="@dimen/worklog_card_resting_elevation"
            app:cardCornerRadius="@dimen/worklog_card_resting_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/worklog_card_bottom_padding"
                android:paddingEnd="@dimen/worklog_card_horizontal_padding"
                android:paddingStart="@dimen/worklog_card_horizontal_padding"
                android:paddingTop="@dimen/worklog_card_vertical_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/worklog_detail_clocked_in_text"
                    android:textSize="@dimen/worklog_label_text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/worklog_item_bottom_padding">

                    <TextView
                        android:id="@+id/worklog_detail_clocked_in"
                        style="@style/WorkLogRelevantText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageButton
                        android:id="@+id/edit_start_date_button"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="@dimen/image_button_dimension"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/image_button_padding"
                        android:src="@drawable/ic_action_pick_date"
                        android:tint="@color/colorAccent" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/worklog_detail_clocked_out_text"
                    android:textSize="@dimen/worklog_label_text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/worklog_item_bottom_padding">

                    <TextView
                        android:id="@+id/worklog_detail_clocked_out"
                        style="@style/WorkLogRelevantText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageButton
                        android:id="@+id/edit_end_date_button"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="@dimen/image_button_dimension"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/image_button_padding"
                        android:src="@drawable/ic_action_pick_date"
                        android:tint="@color/colorAccent" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/breaks_text" />

                    <ImageButton
                        android:id="@+id/add_break_button"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="@dimen/image_button_dimension"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_add_black_24px"
                        android:tint="@color/colorAccent" />

                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/breaks_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/worklog_breaks_recycler_view" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/worklog_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/worklog_detail_delete_text" />

    </LinearLayout>

</ScrollView>
