<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/det_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/det_collapsing_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/det_photo_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:fitsSystemWindows="false"
                android:src="@drawable/im_blank_profile"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/det_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                app:layout_collapseMode="pin">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="@dimen/cardview_top_overlap"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cardview_margin"
            app:cardElevation="@dimen/cardview_elevation"
            app:contentPadding="@dimen/cardview_content_padding" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/time_status_image_view"
                    android:layout_width="@dimen/det_status_icon_size"
                    android:layout_height="@dimen/det_status_icon_size"
                    android:src="@drawable/im_grey_light"
                    android:layout_gravity="end"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    style="@style/LinearLayoutVerticalMargin">

                    <ImageView
                        android:layout_width="@dimen/det_item_icon_size"
                        android:layout_height="@dimen/det_item_icon_size"
                        android:src="@drawable/im_wage_tag"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_wage"
                        style="@style/CardViewTextItem"/>

                    <TextView
                        android:id="@+id/det_wage_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CardViewTextItem" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    style="@style/LinearLayoutVerticalMargin">

                    <ImageView
                        android:layout_width="@dimen/det_item_icon_size"
                        android:layout_height="@dimen/det_item_icon_size"
                        android:src="@drawable/im_hours_worked"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_periodic_worked_hours"
                        style="@style/CardViewTextItem"/>

                    <TextView
                        android:id="@+id/det_unpaid_hours_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CardViewTextItem" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    style="@style/LinearLayoutVerticalMargin">

                    <ImageView
                        android:layout_width="@dimen/det_item_icon_size"
                        android:layout_height="@dimen/det_item_icon_size"
                        android:src="@drawable/im_earnings"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_periodic_earnings"
                        style="@style/CardViewTextItem"/>

                    <TextView
                        android:id="@+id/det_unpaid_earnings_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CardViewTextItem" />

                    <Button
                        android:id="@+id/det_pay_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/button_horizontal_padding"
                        android:paddingEnd="@dimen/button_horizontal_padding"
                        android:layout_marginStart="@dimen/det_button_margin"
                        android:text="@string/pay_button_text" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    style="@style/LinearLayoutVerticalMargin">

                    <ImageView
                        android:layout_width="@dimen/det_item_icon_size"
                        android:layout_height="@dimen/det_item_icon_size"
                        android:src="@drawable/im_hours_worked"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_total_hours_worked"
                        style="@style/CardViewTextItem"/>

                    <TextView
                        android:id="@+id/det_total_hours_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CardViewTextItem" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    style="@style/LinearLayoutVerticalMargin">

                    <ImageView
                        android:layout_width="@dimen/det_item_icon_size"
                        android:layout_height="@dimen/det_item_icon_size"
                        android:src="@drawable/im_earnings"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_total_earnings"
                        style="@style/CardViewTextItem"/>

                    <TextView
                        android:id="@+id/det_total_earnings_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CardViewTextItem" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>